responsive changes done

--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
         <p id="hiring-line2">Top Startups & MNC's Hire</p>
         <p id="hiring-line3">Software Engineer</p>
         <p id="hiring-line4">From Acciojob upto 41 Lakhs</p>
-        <img src="./assets/Companies-frame1.svg" />
-        <img src="./assets/Companies-frame2.svg" />
-        <img src="./assets/Companies-frame3.svg" />
+        <marquee behaviour="scroll" direction="left" scrollamount="10"><img src="./assets/Companies-frame1.svg" /></marquee>
+        <marquee behaviour="scroll" direction="right"  scrollamount="10"><img src="./assets/Companies-frame2.svg" /></marquee>
+        <marquee behaviour="scroll" direction="left"  scrollamount="10"><img src="./assets/Companies-frame3.svg" /></marquee>
         <button class="btn btn-primary fst-italic mt-4">
           Placement Report >
         </button>
