--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Document</title>
+    <title>Acciojob Clone</title>
+    <link rel="icon" href="./assets/Acciojob-icon.svg" type="image/x-icon" />
   </head>
   <body>
     <header>
@@ -254,9 +255,15 @@
         <p id="hiring-line2">Top Startups & MNC's Hire</p>
         <p id="hiring-line3">Software Engineer</p>
         <p id="hiring-line4">From Acciojob upto 41 Lakhs</p>
-        <marquee behaviour="scroll" direction="left" scrollamount="10"><img src="./assets/Companies-frame1.svg" /></marquee>
-        <marquee behaviour="scroll" direction="right"  scrollamount="10"><img src="./assets/Companies-frame2.svg" /></marquee>
-        <marquee behaviour="scroll" direction="left"  scrollamount="10"><img src="./assets/Companies-frame3.svg" /></marquee>
+        <marquee behaviour="scroll" direction="left" scrollamount="10"
+          ><img src="./assets/Companies-frame1.svg"
+        /></marquee>
+        <marquee behaviour="scroll" direction="right" scrollamount="10"
+          ><img src="./assets/Companies-frame2.svg"
+        /></marquee>
+        <marquee behaviour="scroll" direction="left" scrollamount="10"
+          ><img src="./assets/Companies-frame3.svg"
+        /></marquee>
         <button class="btn btn-primary fst-italic mt-4">
           Placement Report >
         </button>
